# HomeNextGen

./: .gitmodules  .travis.yml  README.md  hello_world.c  openwrt_setup.py  packages.toml
hng_framework/: Cargo.toml
hng_framework/src/: lib.rs  main.rs
hng_framework/src/device/: channel.rs  mod.rs
hng_framework/src/node/: light.rs  mod.rs
rust-setup/: path-config.sh
rust-setup/hello/: Cargo.toml
test_node/src/: main.rs
